<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LorealBAAutomation</string>
    <string name="data_uploaded_successfully">Database Uploaded Successfully</string>
    <string name="errordatabase_not_uploaded">Error in Database Uploading</string>
    <string name="database_not_uploaded">Database Not Uploaded</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="nonetwork"> No Network Connection. Please Check Your Internet Connection</string>
    <string name="previous_data_upload">Please Upload Previous Data First</string>
    <string name="want_download_data">Do you want to Download Data?</string>
    <string name="title_activity_counter_login">CounterLogin</string>
    <string name="notsuppoted">This device is not supported.</string>
    <string name="dashboard">Dashboard</string>
    <string name="countermanu">Counter Menu</string>
    <string name="offers">Offers</string>
    <string name="badviser_menu">Beauty Adviser Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_dealar_board">DealarBoardActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="android_version">               Android Version - 1.0</string>

    <string name="sync_data">Sync Data</string>
    <string name="ba_profile">BA Profile</string>
    <string name="counter_menu">Counter Menu</string>
    <string name="ba_menu">BA Menu</string>
    <string name="menu_service">Services</string>
    <string name="menu_reset_password" translatable="false">Reset Password</string>
    <string name="menu_logout" translatable="false">Logout</string>
    <string name="title_activity_auto_update" translatable="false">AutoUpdateActivity</string>
    <string name="new_update_available">New Update Available</string>
    <string name="ok">OK</string>
    <string name="title_activity_save_data">Do you want to save the data</string>
    <string name="download_data" translatable="false">Downloading Data</string>
    <string name="title_activity_user_login" translatable="false">UserLoginActivity</string>
    <string name="user_login" translatable="false">Counter Login</string>
    <string name="reference_image" translatable="false">Reference Image</string>
    <string name="presetup_img_str" translatable="false">Pre Set-Up Image</string>
    <string name="postetup_img_str" translatable="false">Post Set-Up Image</string>
    <string name="dialog_title" translatable="false">Parinaam</string>
    <string name="export_database" translatable="false">Export Database</string>
    <string name="Areyou_sure_take_backup"> Are you sure you want to take the backup of your data ?</string>
    <string name="errordatabase_not_exporting" translatable="false">Error in Database Exporting</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_tab_login">TabLoginActivity</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_pin" tools:ignore="ExtraTranslation">This pin is incorrect</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_rules">Password Rules</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="submit">Submit</string>
    <string name="error">Error Uploading</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="error_field_required">This field is required</string>
    <string name="password_and_confirm_password_not_match">Password and confirm password does not match</string>
    <string name="space_not_allowed_in_password">Space is not allowed in password</string>
    <string name="new_password_not_equal_to_old_password">New password should not be equal to old password</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="pw_rules">1. Must be between 6 to 8 characters long. \n\n 2. Must contain following combinations \n\n a. Uppercase characters(A-Z) \n b. Lowercase characters(a-z) \n c. Numbers(0-9) \n d. Special characters(@#$%)</string>
    <string name="title_activity_auto_login">AutoLoginActivity</string>
    <string name="title_activity_mpin">MPinActivity</string>
    <string name="title_activity_change_password">Change Password</string>

</resources>
