<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sync_data_nav"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/sync_data" />
        <item
            android:id="@+id/nav_ba_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/ba_profile" />
        <item
            android:id="@+id/nav_counter_menu"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/counter_menu" />

        <item
            android:id="@+id/nav_ba_menu"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/ba_menu" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_service" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_reset_password"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_reset_password" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
