<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/custom_layout_margin11"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".dailyactivity.CounterImageActivity"
    tools:showIn="@layout/activity_counter_image">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/custom_layout_margin11"
        app:cardCornerRadius="@dimen/text_margin_10dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="serif"
                android:gravity="center"
                android:padding="@dimen/custom_margin"
                android:text="@string/reference_image"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="normal" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="@dimen/text_margin_10dp"
                android:background="@mipmap/ref_counter_img"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="6"
                    android:fontFamily="serif"
                    android:gravity="center_vertical"
                    android:padding="@dimen/custom_margin"
                    android:text="@string/presetup_img_str"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="normal" />



                <ImageView
                    android:id="@+id/presetup_img_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@mipmap/camera" />

                <ImageView
                    android:id="@+id/presetup_img_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/custom_margin"
                    android:layout_weight="2"
                    android:src="@mipmap/camera" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/text_25dp"
                android:background="@color/grey_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_25dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="6"
                    android:fontFamily="serif"
                    android:gravity="center_vertical"
                    android:padding="@dimen/custom_margin"
                    android:text="@string/postetup_img_str"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="normal" />


                <ImageView
                    android:id="@+id/post_setup_img_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@mipmap/camera" />

                <ImageView
                    android:id="@+id/post_setup_img_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/custom_margin"
                    android:layout_weight="2"
                    android:src="@mipmap/camera" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>
